--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.2",
     "lodash-es": "^4.17.21",
@@ -23,8 +24,10 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "consola": "^2.15.3",
+    "mockjs": "^1.1.0",
     "sass": "^1.60.0",
     "vite": "^4.1.4",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "^2.0.0"
   }
 }
