--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mockjs": "^1.1.0",
     "sass": "^1.60.0",
     "vite": "^4.1.4",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "^2.0.0"
   }
