--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.7",
     "echarts": "^5.4.2",
     "lodash-es": "^4.17.21",
+    "nprogress": "^0.2.0",
     "postcss-px2rem": "^0.3.0",
     "vant": "^3.6.11",
     "vue": "^3.2.47",
